--- a/Security-LDAP/src/main/resources/application.properties
+++ b/Security-LDAP/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 
+spring.ldap.embedded.port=8389
+spring.ldap.embedded.ldif=classpath:ldap-data.ldif  
+#reference to the file where you want to seed the data in the ldap instance.
+#ldif -> stands for ldap data interchange format
+
+
