--- a/Security-LDAP/src/main/resources/application.properties
+++ b/Security-LDAP/src/main/resources/application.properties
@@ -3,5 +3,8 @@ spring.ldap.embedded.port=8389
 spring.ldap.embedded.ldif=classpath:ldap-data.ldif  
 #reference to the file where you want to seed the data in the ldap instance.
 #ldif -> stands for ldap data interchange format
+spring.ldap.embedded.base-dn=dc=springframework,dc=org
+#first(root) node is org then the springframework node after it  and then other nodes are adding after this all
+
 
 
