--- a/Security-JWT/pom.xml
+++ b/Security-JWT/pom.xml
@@ -16,6 +16,9 @@
 	<properties>
 		<java.version>11</java.version>
 	</properties>
+	<properties>
+		<kotlin.version>1.5.10</kotlin.version>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
